# invenio-subjects-nasa

./: .gitignore  CHANGES.md  MANIFEST.in  Makefile  README.md  licence  license  main.py  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
invenio_subjects_nasa/: __init__.py  cli.py  config.py  convert_data.py  converter.py  load_data.py  main.py  utils.py  write_data.py
invenio_subjects_nasa/downloads/: nasa_xs_test.csv
invenio_subjects_nasa/vocabularies/: __init__.py  nasa_thesaurus.yaml  out_yaml_1.yaml  test_xs_nasa.csv  vocabularies.yaml
tests/: __init__.py  test_config.py  test_convert_data.py  test_main.py
tests/test_data/: input_test.csv  output_test.yaml
