
[metadata]
version = attr: nasa_vocabularies.__version__

[options.entry_points]
console_scripts =
    invenio-subjects-nasa = nasa_vocabularies.main:main
invenio_rdm_records.fixtures =
    invenio_subjects_nasa = invenio_subjects_nasa.vocabularies

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_subjects_mesh --cov-report=term-missing
testpaths = tests invenio_subjects_mesh

[pydocstyle]
add_ignore = D401