[metadata]
name= invenio_subjects_nasa
version = attr: invenio_subjects_nasa.__version__
description = invenio_subjects_nasa vocabularies
long_description_content_type= text/markdown
long_description = file:README.md, CHANGES.md
keywords= invenio vocabularies nasa
license=MIT
author=KTH Royal Institute of Technology
author_email=info@kth.se
platforms=any,
url=https://github.com/Samk13/invenio-subjects-nasa
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=2.1.7
    PyYAML>=6.0.1
    wheel>=0.42.0

[options.entry_points]
console_scripts =
    invenio-subjects-nasa = main:main
invenio_rdm_records.fixtures =
    invenio_subjects_nasa = invenio_subjects_nasa.vocabularies

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_subjects_nasa

[isort]
profile=black

[pydocstyle]
add_ignore = D401, E501, D100